--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "test": "testcafe chrome:headless tests/**/* -r xunit:/tmp/test-results/testcafe/results.xml"
+  },  
   "devDependencies": {
     "testcafe": "^1.17.1",
     "testcafe-reporter-xunit": "^2.1.0"
