--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ orbs:
 jobs:
   test:
     docker:
-      - image: testcafe/testcafe:latest
+      - image: circleci/node:lts-browsers
     steps:
       - checkout
       - node/install-packages
