--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,9 @@
-version: 2.1
 orbs:
   node: circleci/node@4.1.0
 jobs:
   test:
     docker:
-      - image: circleci/node:lts-browsers
+      - image: testcafe/testcafe:latest
     steps:
       - checkout
       - node/install-packages
